test/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deploy-test
  namespace: frontend
spec:
  selector:
    matchLabels:
      app: front-test # service.yaml 안의 selector.app 이름과 동일해야 한다. 
  replicas: 1
  template:
    metadata:
      labels:
        app: front-test
    spec:
      containers:
        - name: front-test
          image: whiter018/frontend:v1.0
          ports:
            - containerPort: 80
