test/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-system
  name: front-test-svc
spec:
  selector:
    app: front-test
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
