test/service.yml
apiVersion: v1
kind: Service
metadata:
  name: withus-test-service
spec:
  selector:
    app: withus-test
  ports:
    - port: 80
      targetPort: 8080
